--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/responsive.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
     
 </head>
 
@@ -27,7 +27,7 @@
                 <div class="content-info">
 
                     <div class="sedans-icon">
-                        <img src="src/images/icon-sedans.svg" alt="sedans-icon">
+                        <img src="./src/images/icon-sedans.svg" alt="sedans-icon">
                     </div>
 
                     <h1 class="title">Sedans</h1>
@@ -46,7 +46,7 @@
                 <div class="content-info">
 
                     <div class="suvs-icon">
-                        <img src="src/images/icon-suvs.svg" alt="suvs-icon">
+                        <img src="./src/images/icon-suvs.svg" alt="suvs-icon">
                     </div>
 
                     <h1 class="title">Suvs</h1>
@@ -64,7 +64,7 @@
                 <div class="content-info">
                     
                     <div class="luxury-icon">
-                        <img src="src/images/icon-luxury.svg" alt="luxury-icon">
+                        <img src="./src/images/icon-luxury.svg" alt="luxury-icon">
                     </div>
 
                     <h1 class="title">Luxury</h1>
